# Meridian59

./: AGENTS.md  CMakeLists.txt  copy-steam-assets.sh  run-client.sh
.github/workflows/: c-cpp.yml
.opencode/plans/: blakserv-rust-port.md  cmake-cross-compilation.md  kod-compiler-rust-rewrite.md  linux-client-buildsystem.md  linux-client-port.md
.opencode/skills/legacy-build/: SKILL.md
.opencode/skills/meridian59-client/: SKILL.md
.opencode/skills/meridian59-protocol/: SKILL.md
.opencode/skills/meridian59-server/: SKILL.md
.opencode/skills/model-selection/: SKILL.md
blakcomp/: CMakeLists.txt
blakserv/: CMakeLists.txt
client-win32/: CMakeLists.txt
client-win32/clientd3d/: CMakeLists.txt
client-win32/libarchive/: CMakeLists.txt
client-win32/libpng/: CMakeLists.txt
client-win32/modules/: CMakeLists.txt
client-win32/rscload/: CMakeLists.txt
client-win32/zlib/: CMakeLists.txt
clientd3d/: boverlay.c  client.c  client.h  client.rc  client3d.h  d3drender.c  d3drender.h  dibutil.c  editbox.h  game.h  gameuser.h  intrface.c  makepal.c  maketrig.c  move.h  object.c  palette.h  preferences.c  web.h
cmake/: CompileAsCXX.cmake  compile_kod.py  mingw-w64-i686.cmake  mingw-w64-x86_64.cmake
include/: dibutil.h  fixedpt.h
kod/: CMakeLists.txt
module/admin/: admin.c
module/char/: char.c
module/chess/: chess.c  chess.rc
module/dm/: dm.c
module/intro/: intro.c  intro.def  intro.h  intro.rc
module/mailnews/: mailnews.c  mailnews.rc
module/merintr/: enchant.c  inventry.c  merintr.c  merintr.rc  mermain.c
util/: CMakeLists.txt
